completed the leftover tablet styling (footer spacing, photographer name, some font issues)

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -13,6 +13,7 @@
 
   @include tablet {
     padding: 24px;
+    padding-top: 48px;
     @include font(20px, 26px, 500);
   }
 
